# scw-registry-cleaner

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  action.yaml  entrypoint.sh  pyproject.toml  requirements.dev.txt  requirements.txt  tox.ini
scw_registry_cleaner/: api.py  cli.py
src/scw_registry_cleaner/: __init__.py  api.py  cli.py
