[tool.poetry]
name = "scw-registry-cleaner"
version = "0.1.0"
description = "Clean docker images from scaleway registry"
authors = ["gazorby <gazorby@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "scw_registry_cleaner"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"
anyio = "^3.7.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
