[tool.poetry]
name = "scw-registry-cleaner"
version = "0.1.0"
description = "Clean docker images from scaleway registry"
authors = ["gazorby <gazorby@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "scw_registry_cleaner", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
anyio = "^3.7.0"
prettytable = "^3.8.0"


[tool.poetry.group.dev.dependencies]
black = { version = "^22.10.0", allow-prereleases = true }
mypy = "^1.4.1"
pylint = "^2.17.4"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_type = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "src/scw_registry_cleaner/__init__.py:__version__",
    "pyproject.toml:^version =",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint.main]
disable = [
    "line-too-long",
    "no-self-argument",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
]
enable = "useless-suppression"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88


[tool.pycln]
all = true


[tool.codespell]
skip = '*.po,*.ts,./src/3rdParty,./src/Test,*.lock,requirements.*.txt'
